# Maestro

./: .gitignore  AUTHORS.md  DISCLAIMER.md  LICENSE  README.md  maestro_gui.py  requirements-desktop.txt
.github/release-notes/: default.md  v0.1.0.md  v0.1.1.md
.github/workflows/: pages.yml  release.yml
Agent/: README.md  pyproject.toml  requirements.txt
Agent/app/: __init__.py  agent.py  config.py  guard.py  humming.py  main.py
Agent/detector/: README.md  __init__.py  humming_tester.py  requirements.txt
Agent/docs/: api-reference.md  examples.md  getting-started.md
Agent/tests/: test_app.py  test_maestroxml.py
Plugins/: README_python_bridge.md  live_swapper.qml  maestro_python_bridge.qml  score_operations.js
agent/: README.md  __init__.py  generator.py
apps/: README.md
apps/frontend-desktop/: README.md  pyproject.toml
apps/frontend-desktop/src/maestro_desktop/: __init__.py  app.py  backend.py  diagnostics.py  gui_runtime.py  plugin_setup.py  runtime_support.py  settings_store.py  version.py
apps/frontend-desktop/tests/: test_app_entrypoint.py  test_backend.py  test_diagnostics.py  test_import.py  test_plugin_setup.py  test_runtime_support.py  test_settings_store.py
apps/plugin/: README.md
apps/service/: README.md  pyproject.toml
apps/service/src/maestro_service/api/: app.py
apps/service/src/maestro_service/bootstrap/: __init__.py  config.py  generator.py  humming.py
apps/service/tests/: test_service_app.py
contracts/: README.md
contracts/score-actions/: README.md
contracts/service-api/: README.md  openapi.yaml
docs/: README.md
docs/architecture/: migration-map.md  repository-guide.md
docs/integration/: README.md
legacy/: README.md
legacy/plugin-experiment/: live_swapper.qml
legacy/pyqt-overlay/: maestro_gui_legacy.py
legacy/static-web-prototype/: app.js  index.html  styles.css
packaging/macos/: README.md  build_app.sh  make_dmg.sh  (+2 more)
site/: index.html  styles.css
tests/: test_maestro_gui_wrapper.py  test_monorepo_smoke.py
(+32 files in other folders)
