[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro-desktop"
version = "0.1.0"
description = "PyQt desktop frontend for Maestro."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.0.0",
]

[project.scripts]
maestro-desktop = "maestro_desktop.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
