[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro-service"
version = "0.1.0"
description = "Local FastAPI service for Maestro."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Kashi Tuteja" },
  { name = "Arthur Gilfanov" },
  { name = "Matthew Li" },
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "maestro-agent-core>=0.1.0",
  "maestro-humming-detector>=0.1.0",
  "maestroxml>=0.1.0",
  "openai>=1.70,<2",
  "pydantic>=2,<3",
  "uvicorn[standard]>=0.34,<1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
